Styling for headings containing links, fixed layout when wrapping post cover image in an anchor

--- a/main.less
+++ b/main.less
@@ -123,6 +123,16 @@ h1, h2, h3, h4, h5 {
 	max-width: 64ch;
 	margin-bottom: 0.6rem;
 	color: var(--heading-color);
+	& a {
+		text-decoration-thickness: 0px;
+		text-decoration-color: #f9f8f3;
+		&:hover {
+			color: var(--text-color);
+			text-decoration: underline;
+			text-decoration-thickness: 2px;
+			text-decoration-color: var(--brand-color);
+		}
+	}
 }
 h1, .h1 {
 	font-size: 3rem;
@@ -133,12 +143,12 @@ h2, .h2 {
 	font-size: 2.2rem;
 	margin-top: 3rem;
 }
-h3 {
+h3, .h3 {
 	font-family: 'libre_franklin';
 	font-size: 1.5rem;
 	margin-top: 2rem;
 }
-h4 {
+h4, .h4 {
 	font-family: 'libre_franklin';
 	font-size: 1.2rem;
 	margin-top: 2rem;
@@ -181,7 +191,6 @@ a {
 	&:hover {
 		text-decoration-thickness: 3px;
 		transition: var(--fast);
-		background-color: ;
 		&::after {
 			/* colors the arrow on .link-arrow::after type of links on hover */
 			color: #ffbe12;
@@ -200,11 +209,6 @@ a {
 		/* Image link like movie screenshot posts on the journal */
 		box-shadow: 0px 0px 0px var(--brand-color);
 		transition: var(--slow);
-	}
-	&:hover {
-		& img {
-			box-shadow: 0px 4px 0px var(--brand-color);
-		}
 	}
 }
 
@@ -245,8 +249,9 @@ a {
 ----------------------------*/
 ul, ol {
 	padding-left: 32px;
+	color: var(--text-color);
 	& ul,
-	& ol {
+	& ol { /* Nested lists */
 		padding-left: 24px;
 		margin-top: 0.4rem;
 		margin-bottom: 1rem;
@@ -320,6 +325,16 @@ article {
 		}
 		& .cover-img {
 			grid-area: cover;
+			display: flex;
+			& img {
+				height: 100%;
+				width: auto;
+				object-fit: contain;
+				margin: 0 auto;
+			}
+			&:hover {
+					box-shadow: 0px 4px 0px var(--brand-color);
+			}
 		}
 		& .post-body {
 			grid-area: body;
@@ -343,7 +358,6 @@ article {
 		& .cover-img {
 			grid-area: cover;
 			margin-bottom: var(--m);
-			object-fit: contain;
 			max-height: 520px;
 		}
 		& header {
@@ -408,7 +422,7 @@ article {
 	& .projects div {
 		margin-top: var(--l);
 		margin-bottom: var(--l);
-		& a {
+		& .cover-img {
 			text-decoration: none;
 			& img {
 				width: 100%;
